添加OCR图片识别功能并为OCR接口添加安全认证